[package]
name = "ether-link"
version = "0.0.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/bongkow/ether-link"
description = "lightweight rust library for ethereum communication"
readme = "README.md"
keywords = ["ethereum"]
categories = ["cryptography", "authentication"]

[dependencies]
k256 = { version = "0.13.4", features = ["ecdsa"] }
rand = "0.9.1"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
hex = "0.4.3"
sha3 = "0.10.8"
ethers = "2.0.14"
[dev-dependencies]

